# browsercookie-rs

./: .gitignore  Cargo.toml  README.md  README.rst
.github/workflows/: ci.yml
src/: bin.rs  errors.rs  firefox.rs  lib.rs
tests/resources/: cookies.sqlite  profiles.ini  profiles_with_install.ini  recovery.jsonlz4
tests/resources/Profiles/1qbuu7ux.default/: cookies.sqlite
tests/resources/Profiles/1qbuu7ux.default/sessionstore-backups/: recovery.jsonlz4
