[package]
name = "browsercookie-rs"
version = "0.1.1"
authors = ["Bharadwaj Machiraju <tunnelshade.in>"]
edition = "2018"
repository = "https://github.com/tunnelshade/browsercookie-rs"
documentation = "https://docs.rs/browsercookie-rs/"
exclude = ["tests/resources/*"]
description = "A simple filesystem browser cookie extractor"
readme = "README.rst"
license = "MIT"
keywords = ["cookies", "browser", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "browsercookie"
path = "src/lib.rs"

[[bin]]
name = "browsercookies"
path = "src/bin.rs"
doc = false

[dependencies]
cookie = "0.14.0"
dirs = "3.0"
rust-ini = "0.16.0"
# serde = { version = "1.0.90", features = ["derive"]}
# serde_json = "1.0.39"
regex = "1"
clap = "2.33.0"
rusqlite = "0.24"
tempdir = "0.3"
