[package]
name = "browsercookie-rs"
version = "0.2.0"
authors = ["Bharadwaj Machiraju <tunnelshade.in>", "Piotr Czajka <piotr.filip.czajka@gmail.com"]
edition = "2018"
repository = "https://github.com/ginkooo/browsercookie-rs"
documentation = "https://docs.rs/browsercookie-rs/"
exclude = ["tests/resources/*"]
description = "A simple filesystem browser cookie extractor"
readme = "README.rst"
license = "MIT"
keywords = ["cookies", "browser", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "browsercookie"
path = "src/lib.rs"

[[bin]]
name = "browsercookies"
path = "src/bin.rs"
doc = false

[dependencies]
byteorder = "1"
cookie = "0"
dirs = "1"
lz4 = "1"
memmap = "0"
rust-ini = "0"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.39"
regex = "1"
clap = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["sqlite"] }
futures = "0.3.28"
